<?xml version="1.0" encoding="utf-8"?>
<com.stkj.common.ui.widget.shapelayout.ShapeFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@null"
    android:layout_marginRight="@dimen/dp_4"
    android:layout_marginTop="@dimen/dp_5"
    android:layout_marginBottom="@dimen/dp_5"
    app:topRightRadiusT="@dimen/dp_5"
    app:bottomRightRadiusT="@dimen/dp_5"
    app:solidColorT="@color/white">


<com.stkj.common.ui.widget.shapelayout.ShapeLinearLayout
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@null">


   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_details"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/dp_5" />

    <!-- 商品重量区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="36dp">

        <TextView
            android:id="@+id/product_weight_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_weight"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_order_weight_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_weight"
                android:textColor="@color/text_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_order_weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20公斤"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- 商品库列表 -->
    <LinearLayout
        android:id="@+id/ll_goods_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:maxHeight="@dimen/dp_80"
        android:visibility="gone">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_goods_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_review_gross_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/review_gross"
                android:textSize="16sp"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tv_review_gross_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--公斤"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_review_trae_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/review_tare"
                android:textSize="16sp"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tv_review_tare_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missing_placeholder"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_net_weight_diff_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/net_weight_diff"
                android:textSize="16sp"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tv_net_weight_diff_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missing_placeholder"
                android:textSize="16sp"
                android:textColor="@color/text_blue"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <!-- 商品金额区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_amount"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_amount"
                android:textSize="16sp"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tv_order_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¥166.00"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/missing_amount"
                android:textSize="16sp"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tv_missing_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_missing_placeholder"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/review_amount"
                android:textSize="16sp"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/tv_review_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_missing_placeholder"
                android:textSize="16sp"
                android:textColor="@color/text_blue"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</com.stkj.common.ui.widget.shapelayout.ShapeLinearLayout>

</com.stkj.common.ui.widget.shapelayout.ShapeFrameLayout>