<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_review_gross_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/review_gross"
            android:textSize="16sp"
            android:textColor="@color/text_secondary" />

        <TextView
            android:id="@+id/tv_review_gross_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--公斤"
            android:textSize="16sp"
            android:textColor="@color/text_primary"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_review_trae_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/review_tare"
            android:textSize="16sp"
            android:textColor="@color/text_secondary" />

        <TextView
            android:id="@+id/tv_review_tare_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_placeholder"
            android:textSize="16sp"
            android:textColor="@color/text_primary"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>